# escript

./: CMakeLists.txt
docs/: Makefile  index.html  index.texi
examples/: CMakeLists.txt
examples/script/: CMakeLists.txt  main.cpp
examples/script/resources/: script.tcl
scripts/: generate_elements.py
src/: escript.cpp  escript.hpp  escript_bindings.cpp  escript_bindings.gen.hpp  escript_bindings.hpp  escript_elements_fwd.hpp  escript_tcl.cpp  escript_tcl.hpp
src/data/: elements.yml
src/dynamic/: slider.hpp
